<?xml version="1.0"?>
<package format="2">
    <name>imu_covariance</name>
    <version>0.0.1</version>
    <description>Package for appending covariance to IMU messages</description>

    <maintainer email="gcross.code@icloud.com">gareth</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>geometry_msgs</depend>
    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>

    <export>
    </export>
</package>
